<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.lst_1995.manage.theme.ManageThemeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".theme.ManageThemeFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar3"
            style="@style/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/theme_manage" />

        <LinearLayout
            style="@style/layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar3">

            <LinearLayout
                android:id="@+id/dynamicSettingLayout"
                style="@style/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/textView"
                    style="@style/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dynamic_color_use" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/dymicYesButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dynamic_color_yes" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/dymicNoButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dynamic_color_no" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/darkThemeSettingLayout"
                style="@style/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/textView"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_setting" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/systemDefaultButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/system_default_mode" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/lightThemeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/light_mode" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/darkThemeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_mode" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
