<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lst_1995.manage.home.ManageHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            style="@style/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/setting" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/menuManageCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/menuManageTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/menu_manage" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="40dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/salesHistoryCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/salesHistoryTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/sales_history" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/themeManageCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/themeManageTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/theme_manage" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="40dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/tableManageCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/tableManageTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/table_manage" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/waitScreenManageCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/waitScreenManageTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/wait_screen_manage" />
                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="40dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/passwordManageCv"
                        style="@style/cardView"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="12dp">

                        <TextView
                            android:id="@+id/passwordManageTv"
                            style="@style/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/password_manage" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
