<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.lst_1995.manage.waitscreen.ManageWaitScreenViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/layout"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".waitscreen.ManageWaitScreenFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar4"
            style="@style/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/wait_screen_manage" />

        <TextView
            android:id="@+id/textView"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/wait_screen_images"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar4" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button"
                style="@style/tonalButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/image_add" />

            <Button
                android:id="@+id/button2"
                style="@style/outlinedButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>